# $Id: Makefile.am,v 1.1 2006-10-13 08:17:40 marc Exp $

xmlxsltdatadir = $(pkgdatadir)/xml/xslt

xmlxsltdata_DATA =  MARC21slim2DC.xsl \
   MARC21slim2MADS.xsl \
   MARC21slim2MODS.xsl \
   MARC21slim2MODS3-1.xsl \
   MARC21slim2RDFDC.xsl \
   MARC21slim2SRWDC.xsl \
   MARC21slimUtils.xsl


EXTRA_DIST = $(xmlxsltdata_DATA)

