# $Id: Makefile.am,v 1.3 2007-12-14 08:09:28 marc Exp $

xmlxsltdatadir = $(pkgdatadir)/xml/xslt

xmlxsltdata_DATA =  explain2cqlpqftxt.xsl \
   MARC21slim2DC.xsl \
   MARC21slim2MADS.xsl \
   MARC21slim2MODS.xsl \
   MARC21slim2MODS3-1.xsl \
   MARC21slim2RDFDC.xsl \
   MARC21slim2SRWDC.xsl \
   MARC21slimUtils.xsl


EXTRA_DIST = $(xmlxsltdata_DATA)

